# qleany-editor

./: .gitignore  CMakeLists.txt  README.md  org.kde.qleany-editor.desktop  org.kde.qleany-editor.json  org.kde.qleany-editor.metainfo.xml  qleany-editor.kdev4  qleany.yaml
src/core/application/: CMakeLists.txt
src/core/application/application_component_feature/: CMakeLists.txt
src/core/application/application_feature_feature/: CMakeLists.txt
src/core/application/c_q_r_s_component_feature/: CMakeLists.txt
src/core/application/c_r_u_d_feature/: CMakeLists.txt
src/core/application/contracts_component_feature/: CMakeLists.txt
src/core/application/custom_command_feature/: CMakeLists.txt
src/core/application/custom_d_t_o_feature/: CMakeLists.txt
src/core/application/custom_d_t_o_field_feature/: CMakeLists.txt
src/core/application/custom_query_feature/: CMakeLists.txt
src/core/application/d_t_o_component_feature/: CMakeLists.txt
src/core/application/entity_component_feature/: CMakeLists.txt
src/core/application/entity_feature/: CMakeLists.txt
src/core/application/entity_field_feature/: CMakeLists.txt
src/core/application/entity_parent_feature/: CMakeLists.txt
src/core/application/front_end_component_feature/: CMakeLists.txt
src/core/application/global_component_feature/: CMakeLists.txt
src/core/application/interactor_component_feature/: CMakeLists.txt
src/core/application/presenter_component_feature/: CMakeLists.txt
src/core/application/presenter_list_model_feature/: CMakeLists.txt
src/core/application/presenter_single_feature/: CMakeLists.txt
src/core/application/project_feature/: CMakeLists.txt
src/core/application/recent_project_feature/: CMakeLists.txt
src/core/application/repository_component_feature/: CMakeLists.txt
src/core/application/repository_feature/: CMakeLists.txt
src/core/application/root_feature/: CMakeLists.txt
src/core/contracts.cqrs/: CMakeLists.txt
src/core/contracts.cqrs/application_component_cqrs/: CMakeLists.txt
src/core/contracts.cqrs/application_feature_cqrs/: CMakeLists.txt
src/core/contracts.cqrs/c_q_r_s_component_cqrs/: CMakeLists.txt
src/core/contracts.cqrs/c_r_u_d_cqrs/: CMakeLists.txt
src/core/contracts.cqrs/contracts_component_cqrs/: CMakeLists.txt
src/core/contracts.cqrs/custom_command_cqrs/: CMakeLists.txt
src/core/contracts.cqrs/custom_d_t_o_cqrs/: CMakeLists.txt
src/core/contracts.cqrs/custom_d_t_o_field_cqrs/: CMakeLists.txt
src/core/contracts.cqrs/custom_query_cqrs/: CMakeLists.txt
src/core/contracts.cqrs/d_t_o_component_cqrs/: CMakeLists.txt
src/core/contracts.cqrs/entity_component_cqrs/: CMakeLists.txt
src/core/contracts.cqrs/entity_cqrs/: CMakeLists.txt
src/core/contracts.cqrs/entity_field_cqrs/: CMakeLists.txt
src/core/contracts.cqrs/entity_parent_cqrs/: CMakeLists.txt
src/core/contracts.cqrs/front_end_component_cqrs/: CMakeLists.txt
src/core/contracts.cqrs/global_component_cqrs/: CMakeLists.txt
src/core/contracts.cqrs/interactor_component_cqrs/: CMakeLists.txt
src/core/contracts.cqrs/presenter_component_cqrs/: CMakeLists.txt
src/core/contracts.cqrs/presenter_list_model_cqrs/: CMakeLists.txt
src/core/contracts.cqrs/presenter_single_cqrs/: CMakeLists.txt
src/core/contracts.cqrs/project_cqrs/: CMakeLists.txt
src/core/contracts.cqrs/recent_project_cqrs/: CMakeLists.txt
src/core/contracts.cqrs/repository_component_cqrs/: CMakeLists.txt
src/core/contracts.cqrs/repository_cqrs/: CMakeLists.txt
src/core/contracts.cqrs/root_cqrs/: CMakeLists.txt
src/core/contracts.dto/: CMakeLists.txt
src/core/contracts.dto/application_component_dto/: CMakeLists.txt
src/core/contracts.dto/application_component_dto/application_component/: application_component_dto.h  application_component_relation_dto.h  application_component_with_details_dto.h  create_application_component_dto.h  update_application_component_dto.h
src/core/contracts.dto/application_feature_dto/: CMakeLists.txt
src/core/contracts.dto/application_feature_dto/application_feature/: application_feature_dto.h  application_feature_relation_dto.h  application_feature_with_details_dto.h  create_application_feature_dto.h  update_application_feature_dto.h
src/core/contracts.dto/c_q_r_s_component_dto/: CMakeLists.txt
src/core/contracts.dto/c_q_r_s_component_dto/c_q_r_s_component/: c_q_r_s_component_dto.h  create_c_q_r_s_component_dto.h  update_c_q_r_s_component_dto.h
src/core/contracts.dto/c_r_u_d_dto/: CMakeLists.txt
src/core/contracts.dto/c_r_u_d_dto/c_r_u_d/: c_r_u_d_dto.h  c_r_u_d_relation_dto.h  c_r_u_d_with_details_dto.h  create_c_r_u_d_dto.h  update_c_r_u_d_dto.h
src/core/contracts.dto/contracts_component_dto/: CMakeLists.txt
src/core/contracts.dto/custom_command_dto/: CMakeLists.txt
src/core/contracts.dto/custom_d_t_o_dto/: CMakeLists.txt
src/core/contracts.dto/custom_d_t_o_field_dto/: CMakeLists.txt
src/core/contracts.dto/custom_query_dto/: CMakeLists.txt
src/core/contracts.dto/d_t_o_component_dto/: CMakeLists.txt
src/core/contracts.dto/entity_component_dto/: CMakeLists.txt
src/core/contracts.dto/entity_dto/: CMakeLists.txt
src/core/contracts.dto/entity_dto/entity/: create_entity_dto.h  (+4 more)
src/core/contracts.dto/entity_field_dto/: CMakeLists.txt
src/core/contracts.dto/entity_parent_dto/: CMakeLists.txt
src/core/contracts.dto/front_end_component_dto/: CMakeLists.txt
src/core/contracts.dto/global_component_dto/: CMakeLists.txt
src/core/contracts.dto/interactor_component_dto/: CMakeLists.txt
src/core/contracts.dto/presenter_component_dto/: CMakeLists.txt
src/core/contracts.dto/presenter_list_model_dto/: CMakeLists.txt
src/core/contracts.dto/presenter_single_dto/: CMakeLists.txt
src/core/contracts.dto/project_dto/: CMakeLists.txt
src/core/contracts.dto/recent_project_dto/: CMakeLists.txt
src/core/contracts.dto/repository_component_dto/: CMakeLists.txt
src/core/contracts.dto/repository_dto/: CMakeLists.txt
src/core/contracts.dto/root_dto/: CMakeLists.txt
src/ui/kirigami/: CMakeLists.txt  app.cpp  main.cpp  qleany-editorconfig.kcfgc  realqmlmodules.cmake
(+742 files in other folders)
