add_subdirectory(root_feature)
add_subdirectory(recent_project_feature)
add_subdirectory(project_feature)
add_subdirectory(global_component_feature)
add_subdirectory(entity_component_feature)
add_subdirectory(entity_feature)
add_subdirectory(entity_field_feature)
add_subdirectory(entity_parent_feature)
add_subdirectory(repository_component_feature)
add_subdirectory(repository_feature)
add_subdirectory(interactor_component_feature)
add_subdirectory(application_component_feature)
add_subdirectory(application_feature_feature)
add_subdirectory(c_r_u_d_feature)
add_subdirectory(custom_command_feature)
add_subdirectory(custom_d_t_o_feature)
add_subdirectory(custom_d_t_o_field_feature)
add_subdirectory(custom_query_feature)
add_subdirectory(d_t_o_component_feature)
add_subdirectory(c_q_r_s_component_feature)
add_subdirectory(contracts_component_feature)
add_subdirectory(presenter_component_feature)
add_subdirectory(presenter_single_feature)
add_subdirectory(presenter_list_model_feature)
add_subdirectory(front_end_component_feature)
