add_subdirectory(root_cqrs)
add_subdirectory(recent_project_cqrs)
add_subdirectory(project_cqrs)
add_subdirectory(global_component_cqrs)
add_subdirectory(entity_component_cqrs)
add_subdirectory(entity_cqrs)
add_subdirectory(entity_field_cqrs)
add_subdirectory(entity_parent_cqrs)
add_subdirectory(repository_component_cqrs)
add_subdirectory(repository_cqrs)
add_subdirectory(interactor_component_cqrs)
add_subdirectory(application_component_cqrs)
add_subdirectory(application_feature_cqrs)
add_subdirectory(c_r_u_d_cqrs)
add_subdirectory(custom_command_cqrs)
add_subdirectory(custom_d_t_o_cqrs)
add_subdirectory(custom_d_t_o_field_cqrs)
add_subdirectory(custom_query_cqrs)
add_subdirectory(d_t_o_component_cqrs)
add_subdirectory(c_q_r_s_component_cqrs)
add_subdirectory(contracts_component_cqrs)
add_subdirectory(presenter_component_cqrs)
add_subdirectory(presenter_single_cqrs)
add_subdirectory(presenter_list_model_cqrs)
add_subdirectory(front_end_component_cqrs)
