add_subdirectory(recent_project_dto)
add_subdirectory(global_component_dto)
add_subdirectory(entity_field_dto)
add_subdirectory(entity_parent_dto)
add_subdirectory(entity_dto)
add_subdirectory(entity_component_dto)
add_subdirectory(repository_dto)
add_subdirectory(repository_component_dto)
add_subdirectory(interactor_component_dto)
add_subdirectory(c_r_u_d_dto)
add_subdirectory(custom_d_t_o_field_dto)
add_subdirectory(custom_d_t_o_dto)
add_subdirectory(custom_command_dto)
add_subdirectory(custom_query_dto)
add_subdirectory(application_feature_dto)
add_subdirectory(application_component_dto)
add_subdirectory(d_t_o_component_dto)
add_subdirectory(c_q_r_s_component_dto)
add_subdirectory(contracts_component_dto)
add_subdirectory(presenter_single_dto)
add_subdirectory(presenter_list_model_dto)
add_subdirectory(presenter_component_dto)
add_subdirectory(front_end_component_dto)
add_subdirectory(project_dto)
add_subdirectory(root_dto)
